just some changes to fallback metrics

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -36,7 +36,6 @@ DifficultiesToShow="beginner,easy,medium,hard,challenge"
 CourseDifficultiesToShow="easy,medium,hard"
 # Things to hide. You couldn't play cabinet anyways.
 StepsTypesToHide="lights-cabinet"
-#~ StepsTypesToHide="dance-couple,dance-solo,pump-halfdouble,lights-cabinet"
 
 # The number of entries before "Various" is shown on the BPMDisplay, etc.
 MaxCourseEntriesBeforeShowVarious=10
@@ -58,7 +57,7 @@ SelectMusicScreen="ScreenSelectMusic"
 # Only mess with this if you know what you're doing.
 OverlayScreens="ScreenSystemLayer,ScreenSyncOverlay,ScreenStatsOverlay,ScreenDebugOverlay,ScreenConsoleOverlay,ScreenInstallOverlay"
 
-# Legacy metric: Percentage Scoring shows this many decimals ( 00.00% ).
+# Used in PlayerStageStats for formatting scores.
 PercentScoreDecimalPlaces=2
 
 # 02 #
@@ -67,12 +66,13 @@ PercentScoreDecimalPlaces=2
 # Mostly useless since it doesn't work, as well as that barely anyone has 
 # lights to play around with.
 GameButtonsToShow=""
+# these metrics don't exist yet, but are planned:
 LightEffectRiseSeconds=0.075
 LightEffectFallOffSeconds=0.35
 LightEffectPulseTime=0.100
 
 [ProfileManager]
-# I wouldn't change this either.
+# I wouldn't change these either.
 FixedProfiles=false
 NumFixedProfiles=1
 
@@ -88,7 +88,8 @@ NumSongGroupColors=10
 NumCourseGroupColors=1
 # Legacy metric: how difficult a song has to be for it to glow.
 ExtraColorMeter=GetExtraColorThreshold()
-# The maximum difficulty a OMES stage can be.
+ExtraColor=color("#ff0000")	-- red
+# The maximum difficulty the second extra stage can be.
 ExtraStage2DifficultyMax=8
 # Allow special colors for unlocks and 'preffered' sort
 UseUnlockColor=false
@@ -118,18 +119,18 @@ CourseGroupColor8=color("1,1,1,1") -- white
 CourseGroupColor9=color("1,1,1,1") -- white
 CourseGroupColor10=color("1,1,1,1") -- white
 UnlockColor=color("1,0.5,0,1")
-ExtraColor=color("#ff0000")	-- red
 
 [UnlockManager]
 # Unlock specific things.
 AutoLockChallengeSteps=false
 AutoLockEditSteps=false
+# determine if songs loaded via AdditionalSongs should be locked.
 SongsNotAdditional=true
-UnlockNames=""
 
+UnlockNames=""
 # useful commands:
 # require,(UnlockRequirement),(value);
-# where (UnlockRequirement) is one of the UnlockRequirement enums.
+# where (UnlockRequirement) is one of the UnlockRequirement enum values.
 
 # song,(Song Name);
 # sets a Song to be unlocked
@@ -158,7 +159,7 @@ UnlockNames=""
 
 [ArrowEffects]
 # Complicated stuff you probably shouldn't ever mess with or else you'll 
-# destroy mods completely!
+# destroy mods completely! It's unknown why these were made into metrics.
 FrameWidthEffectsPixelsPerSecond=400
 FrameWidthEffectsMinMultiplier=0.5
 FrameWidthEffectsMaxMultiplier=1.2
@@ -211,7 +212,7 @@ QuantizeArrowYPosition=false
 # unless you truly need to change it, in which case you'd know what it does.
 ShowDancingCharacters=true
 UseStaticBackground=true
-#
+# clamps the output of the background
 ClampOutputPercent=0.0
 #
 LeftEdge=SCREEN_LEFT
@@ -262,8 +263,7 @@ SetNormalCommand=diffusetopedge,color("#fbfb57");diffusebottomedge,color("#fb9c5
 SetChangeCommand=diffusetopedge,color("#fb9c57");diffusebottomedge,color("#fb5757")
 SetRandomCommand=diffusetopedge,color("#fb9c57");diffusebottomedge,color("#fb5757")
 SetExtraCommand=diffusetopedge,color("#fb5757");diffusebottomedge,color("#9c4242")
-# Determines if it shows both bpms ( 000-100 ) or cycles between the min and 
-# max.
+# Determines if it shows both bpms ( 000-100 ) or cycles between the min and max.
 Cycle=true
 # Text when there is no BPM
 NoBpmText="000"
