[Default theme] Added Song Timing Display user preference.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1255,10 +1255,11 @@ LineRollCombo="lua,UserPrefComboOnRolls()"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsExtended"
 PrevScreen="ScreenOptionsExtended"
-LineNames="gNotePos,gAuto,gScore,gSDisp,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter,FancyUIBG"
+LineNames="gNotePos,gAuto,gScore,gSDisp,TimingDisplay,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter,FancyUIBG"
 LinegNotePos="lua,UserPrefNotePosition()"
 LinegScore="lua,UserPrefGameplayShowScore()"
 LinegSDisp="lua,UserPrefGameplayShowStepsDisplay()"
+LineTimingDisplay="lua,UserPrefTimingDisplay()"
 LinegOpts="lua,UserPrefShowLotsaOptions()"
 LinegAuto="lua,UserPrefAutoSetStyle()"
 LinegLongFail="lua,UserPrefLongFail()"
