Add GameState::EditAllowedForExtra metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -490,6 +490,8 @@ LockExtraStageSelection=true
 # [sm-ssc] Normally, in event mode, the premium value is ignored. Set this
 # metric to true to re-gain that behavior.
 DisablePremiumInEventMode=false
+# Let edit steps be allowed for earning extra stages.
+EditAllowedForExtra=false
 
 [GrooveRadar]
 # Polar graph that shows difficulty stuff in depth
