Restore stuff that changed from private testing.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -123,9 +123,9 @@ UnlockColor=color("1,0.5,0,1")
 [UnlockManager]
 # Unlock specific things.
 AutoLockChallengeSteps=false
-AutoLockEditSteps=true
+AutoLockEditSteps=false
 # determine if songs loaded via AdditionalSongs should be locked.
-SongsNotAdditional=false
+SongsNotAdditional=true
 
 UnlockNames=""
 # useful commands:
