--- a/src/StepMania-net2008.vcproj
+++ b/src/StepMania-net2008.vcproj
@@ -3821,59 +3821,59 @@
 			Name="Actors"
 			>
 			<File
-				RelativePath="Actors\Actor.cpp"
+				RelativePath="Actor.cpp"
 				>
 			</File>
 			<File
-				RelativePath="Actors\Actor.h"
+				RelativePath="Actor.h"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorFrame.cpp"
+				RelativePath="ActorFrame.cpp"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorFrame.h"
+				RelativePath="ActorFrame.h"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorFrameTexture.cpp"
+				RelativePath="ActorFrameTexture.cpp"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorFrameTexture.h"
+				RelativePath="ActorFrameTexture.h"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorMultiTexture.cpp"
+				RelativePath="ActorMultiTexture.cpp"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorMultiTexture.h"
+				RelativePath="ActorMultiTexture.h"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorProxy.cpp"
+				RelativePath="ActorProxy.cpp"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorProxy.h"
+				RelativePath="ActorProxy.h"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorScroller.cpp"
+				RelativePath="ActorScroller.cpp"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorScroller.h"
+				RelativePath="ActorScroller.h"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorSound.cpp"
+				RelativePath="ActorSound.cpp"
 				>
 			</File>
 			<File
-				RelativePath="Actors\ActorSound.h"
+				RelativePath="ActorSound.h"
 				>
 			</File>
 			<File
