Add Fade[In/Out]Preview metrics for ScreenEdit.
Let the themer dictate how much fade in and fade out
there is for the preview music in the editor.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3654,6 +3654,9 @@ Beat0OffsetFormat="%s:\n  %.3f secs\n"
 PreviewStartFormat="%s:\n  %.3f secs\n"
 PreviewLengthFormat="%s:\n  %.3f secs\n"
 
+FadeInPreview=0
+FadeOutPreview=1.5
+
 [ScreenPracticeMenu]
 Fallback="ScreenEditMenu"
 Class="ScreenEditMenu"
