I hate when maxx is right about something.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -686,10 +686,10 @@ FOV=90
 PerChoiceScrollElement=false
 PerChoiceIconElement=false
 #
-Choice7Keys="name,7Keys;style,single7;screen,"..Branch.AfterSelectPlayMode()
-Choice10Keys="name,10Keys;style,double10;screen,"..Branch.AfterSelectPlayMode()
-Choice14Keys="name,14Keys;style,double14;screen,"..Branch.AfterSelectPlayMode()
-ChoiceKB7="name,kb7;style,single;screen,"..Branch.AfterSelectPlayMode()
+Choice7Keys="name,7Keys;style,single7;screen,"..Branch.AfterSelectStyle()
+Choice10Keys="name,10Keys;style,double5;screen,"..Branch.AfterSelectStyle()
+Choice14Keys="name,14Keys;style,double7;screen,"..Branch.AfterSelectStyle()
+ChoiceKB7="name,kb7;style,single;screen,"..Branch.AfterSelectStyle()
 #
 ShowScroller=false
 ShowIcon=true
