[backwards] CodeDetector access.
By default, there is no code for Backwards.

Let the themers decide this one.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -323,6 +323,8 @@ SaveScreenshot1=GetCodeForGame("SaveScreenshot1")
 SaveScreenshot2=GetCodeForGame("SaveScreenshot2")
 # on the player options menu.
 CancelAllPlayerOptions=GetCodeForGame("CancelAllPlayerOptions")
+# unused codes:
+Backwards=""
 # deprecated codes:
 NextTheme=""
 NextTheme2=""
