[backwards] Activate Mirror on the theme.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2201,14 +2201,15 @@ Appearance,4="mod,blink;name,Blink"
 # Appearance,5="mod,blink;name,Blink"
 # Appearance,6="mod,randomvanish;name,R.Vanish"
 
-Turn="6;selectmultiple"
+Turn="7;selectmultiple"
 TurnDefault="mod,no turn"
 Turn,1="mod,mirror;name,Mirror"
-Turn,2="mod,left;name,Left"
-Turn,3="mod,right;name,Right"
-Turn,4="mod,shuffle;name,Shuffle"
-Turn,5="mod,supershuffle;name,SuperShuffle"
-Turn,6="mod,softshuffle;name,SoftShuffle"
+Turn,2="mod,backwards;name,Backwards"
+Turn,3="mod,left;name,Left"
+Turn,4="mod,right;name,Right"
+Turn,5="mod,shuffle;name,Shuffle"
+Turn,6="mod,supershuffle;name,SuperShuffle"
+Turn,7="mod,softshuffle;name,SoftShuffle"
 
 # Turn="6"
 # TurnDefault="mod,no turn"
