Slightly better comment.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -121,7 +121,7 @@ CourseGroupColor10=color("1,1,1,1") -- white
 UnlockColor=color("1,0.5,0,1")
 
 [UnlockManager]
-# Unlock specific things.
+# Unlock harder/different steps based on passing easier steps.
 AutoLockChallengeSteps=false
 AutoLockEditSteps=false
 # determine if songs loaded via AdditionalSongs should be locked.
