move "don't give up" text up some so it doesn't get in the way of the receptors on reverse + center 1p

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3175,7 +3175,7 @@ SongOptionsOnCommand=visible,false
 SongOptionsOffCommand=
 #
 DebugX=SCREEN_CENTER_X
-DebugY=SCREEN_BOTTOM-72
+DebugY=SCREEN_BOTTOM-116
 DebugOnCommand=zoom,0.75
 DebugStartOnCommand=stoptweening;diffusealpha,0;linear,1/8;diffusealpha,1
 DebugBackOnCommand=stoptweening;diffusealpha,0;linear,1/8;diffusealpha,1
