`stepmania-ssc` doesn't exist, anyway. Suppose that user runs binary named `stepmania`.

--- a/stepmania.desktop
+++ b/stepmania.desktop
@@ -3,7 +3,7 @@
 Encoding=UTF-8
 Name=Stepmania-ssc
 GenericName=Rhythm and dance game
-TryExec=stepmania-ssc
+TryExec=stepmania
 Exec=stepmania
 Terminal=false
 Icon=stepmania-ssc
