enable selecting characters in rave, fix issue 626. also locks players on the steps line, which partially fixes issue 577

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2854,6 +2854,8 @@ Line17="list,Characters"
 Fallback="ScreenPlayerOptions"
 NextScreen="ScreenStageInformation"
 LineNames="1,8,16,17"
+Line16="list,StepsLocked"
+Line17="list,Characters"
 
 [ScreenSongOptions]
 Fallback="ScreenOptions"
