Add the ExtraStageFreshBar metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -526,6 +526,8 @@ HotValue=1.0
 LifeMultiplier=1.0
 # How good you gotta hit it to keep it alive. ( W3 is 'Great' );
 MinStayAlive="TapNoteScore_W3"
+# If the life bar resets to "default" settings on an extra stage.
+ExtraStageFreshBar=true
 
 # How much it changes
 LifePercentChangeW1=0.008
