--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -526,8 +526,10 @@ HotValue=1.0
 LifeMultiplier=1.0
 # How good you gotta hit it to keep it alive. ( W3 is 'Great' );
 MinStayAlive="TapNoteScore_W3"
-# If the life bar resets to "default" settings on an extra stage.
-ExtraStageFreshBar=true
+# If the life difficulty should be changed on extra stages
+ForceLifeDifficultyOnExtraStage=true
+# And what it should be changed to. Has no effect if the above is false.
+ExtraStageLifeDifficulty=1.0
 
 # How much it changes
 LifePercentChangeW1=0.008
