some themers decided that it was a "good" idea to have more than 10 group colors in their themes. This makes people who DON'T think that having 1,000,000 group colors is a good idea angry. Therefore, up this crap to 25 and if someone uses more than 25 group colors I will kick them in the face 5 times.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -107,6 +107,21 @@ SongGroupColor7=color("#00aeef") -- blue
 SongGroupColor8=color("#00aeef") -- blue
 SongGroupColor9=color("#00aeef") -- blue
 SongGroupColor10=color("#00aeef") -- blue
+SongGroupColor11=color("#00aeef") -- blue
+SongGroupColor12=color("#00aeef") -- blue
+SongGroupColor13=color("#00aeef") -- blue
+SongGroupColor14=color("#00aeef") -- blue
+SongGroupColor15=color("#00aeef") -- blue
+SongGroupColor16=color("#00aeef") -- blue
+SongGroupColor17=color("#00aeef") -- blue
+SongGroupColor18=color("#00aeef") -- blue
+SongGroupColor19=color("#00aeef") -- blue
+SongGroupColor20=color("#00aeef") -- blue
+SongGroupColor21=color("#00aeef") -- blue
+SongGroupColor22=color("#00aeef") -- blue
+SongGroupColor23=color("#00aeef") -- blue
+SongGroupColor24=color("#00aeef") -- blue
+SongGroupColor25=color("#00aeef") -- blue
 # Lots of themes want more than one course color, too
 CourseGroupColor1=color("1,1,1,1") -- white
 CourseGroupColor2=color("1,1,1,1") -- white
