[ffmpeg] Ignore generated files.

--- a/.hgignore
+++ b/.hgignore
@@ -3,6 +3,24 @@ syntax: glob
 *.rej
 *~
 *.o
+*.d
+extern/ffmpeg/doc
+extern/ffmpeg/lib*/*.a
+extern/ffmpeg/.config
+extern/ffmpeg/.version
+extern/ffmpeg/config.asm
+extern/ffmpeg/config.fate
+extern/ffmpeg/config.h
+extern/ffmpeg/config.mak
+extern/ffmpeg/ffmpeg
+extern/ffmpeg/ffmpeg_g
+extern/ffmpeg/ffplay
+extern/ffmpeg/ffplay_g
+extern/ffmpeg/ffprobe
+extern/ffmpeg/ffprobe_g
+extern/ffmpeg/libavutil/avconfig.h
+extern/ffmpeg/version.h
+*.pc
 tests/*.err
 ffmpeg-*
 *.ncb
