Endless is a separate option. Nonstop is a separate option. The only course selection screen that needs a sort menu is Oni (so people can play Survival).

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -248,6 +248,10 @@ UseEasyMarkerFlag=true
 
 [CourseWheel]
 
+[OniWheel]
+Fallback="CourseWheel"
+ModeMenuChoiceNames="Oni,Survival"
+
 [OnlineMusicWheel]
 
 [MusicWheelItem]
@@ -1036,6 +1040,8 @@ PercentScoreP2OnCommand=player,PLAYER_2;addy,SCREEN_CENTER_Y;decelerate,0.35;add
 PercentScoreP2OffCommand=bouncebegin,0.15;zoomx,0;
 
 [ScreenSelectCourse]
+MusicWheelType=GAMESTATE:GetPlayMode() == 'PlayMode_Oni' and "OniWheel" or "CourseWheel"
+Codes=GAMESTATE:GetPlayMode() == 'PlayMode_Oni' and "OniCodeDetector" or "CourseCodeDetector"
 #
 ShowDifficultyList=false
 ShowCourseContentsList=true
@@ -1049,7 +1055,17 @@ ShowPaneDisplayTextP1=false
 ShowPaneDisplayFrameP2=false
 ShowPaneDisplayTextP2=false
 
+
 [CourseCodeDetector]
+NextSort1=""
+NextSort2=""
+NextSort3=""
+NextSort4=""
+ModeMenu1=""
+ModeMenu2=""
+
+[OniCodeDetector]
+Fallback="CodeDetector"
 
 [StepsDisplay]
 FrameLoadCommand=%function(self,param) end;
