Add the SurvivalModOverride metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3075,6 +3075,7 @@ SecondsBetweenComments=10.0
 ScoreKeeperClass=ScoreKeeperClass()
 TickEarlySeconds=0
 LightsMode="LightsMode_Gameplay"
+SurvivalModOverride=true
 #
 PlayerType="Player"
 # useful in some obscure situations where the theme resolution has been increased.
