[LifeMeterBattery] Added MaxLives metric, which limits the maximum amount of lives. Setting this to 0 will remove the limit.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -573,6 +573,8 @@ OverY=0
 # The bar that shows up in Oni mode.
 # any score below this one will cause you to lose a life.
 MinScoreToKeepLife='TapNoteScore_W3'
+# Defines the maximum number of lives in the meter. (0 means no limit)
+MaxLives=0
 # how many lives you'll lose upon doing so.
 SubtractLives=1
 # how many lives you'll lose hitting a mine
