forgot some things, display dumb user warning on MapControllers.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2615,6 +2615,8 @@ Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsService"
 HelpText=Screen.String("HelpTextMapControllers")
 #
+ScreenOnCommand=%function(self) MESSAGEMAN:Broadcast("KeyConfigRequestStall"); end;
+#
 DevicesX=SCREEN_CENTER_X
 DevicesY=SCREEN_TOP+24
 DevicesOnCommand=zoom,0.75;draworder,5;strokecolor,color("0,0,0,1")
