--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1341,12 +1341,12 @@ SongTitleOnCommand=draworder,55;shadowlength,1;basezoom,0.5;zoomy,0;sleep,1.5+0.
 SongTitleOffCommand=
 #
 SongMeterDisplayP1X=Center1Player() and SCREEN_CENTER_X or SCREEN_LEFT+16
-SongMeterDisplayP1Y=Center1Player() and SCREEN_TOP+60 or SCREEN_CENTER_Y
+SongMeterDisplayP1Y=Center1Player() and SCREEN_TOP+60 or SCREEN_CENTER_Y-32
 SongMeterDisplayP1OnCommand=draworder,5;rotationz,Center1Player() and 0 or -90;zoom,0;addx,-24;sleep,1.5;decelerate,0.5;zoom,1;addx,24
 SongMeterDisplayP1OffCommand=
 #
 SongMeterDisplayP2X=Center1Player() and SCREEN_CENTER_X or SCREEN_RIGHT-16
-SongMeterDisplayP2Y=Center1Player() and SCREEN_TOP+60 or SCREEN_CENTER_Y
+SongMeterDisplayP2Y=Center1Player() and SCREEN_TOP+60 or SCREEN_CENTER_Y-32
 SongMeterDisplayP2OnCommand=draworder,5;rotationz,Center1Player() and 0 or -90;zoom,0;addx,24;sleep,1.5;decelerate,0.5;zoom,1;addx,-24
 SongMeterDisplayP2OffCommand=
 #
