[LifeMeterBattery] Fixed various issues (lives not fully disappearing on fail, P2 lose life animation having the wrong x zoom, hide the lives number if it falls below 0).

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -136,6 +136,7 @@ BatteryP2X=0
 BatteryP2Y=0
 #
 NumLivesP2OnCommand=zoomx,-1
+NumLivesP2LoseLifeCommand=zoomx,-1.5;zoomy,1.5;linear,0.15;zoomx,-1;zoomy,1
 
 [LifeMeterBattery Percent]
 # still asking for this even though it's in fallback... -aj
