[StreamDisplay] Added VelocityMultiplier, VelocityMin, VelocityMax, SpringMultiplier and ViscosityMultiplier metrics.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1339,6 +1339,11 @@ NumPills=20
 UseThreePartMethod=false
 ThreePartWidth=128
 AlwaysBounceNormalBar=false
+VelocityMultiplier=4
+VelocityMin=-.06
+VelocityMax=.02
+SpringMultiplier=2.0
+ViscosityMultiplier=0.2
 
 [TextBanner]
 TitleOnCommand=
