Clean up pump stuff under [Player], remove a bunch of redundant functions.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1047,21 +1047,20 @@ HoldJudgmentsUnderField=false
 ComboUnderField=ComboUnderField()
 PenalizeTapScoreNone=false
 JudgeHoldNotesOnSameRowTogether=false
-HoldCheckpoints=(GAMESTATE:GetCurrentGame():GetName() == "pump")
-CheckpointsUseTickcounts=(GAMESTATE:GetCurrentGame():GetName() == "pump")
+HoldCheckpoints=IsGame("pump")
+CheckpointsUseTickcounts=IsGame("pump")
 ; deprecated?
 CheckpointsUseTimeSignatures=false
-CheckpointsTapsSeparateJudgment=CheckpointsTapsSeparateJudgment()
+CheckpointsTapsSeparateJudgment=not IsGame("pump")
 ; someone misunderstood me :x -Daisu
-CheckpointsFlashOnHold=(GAMESTATE:GetCurrentGame():GetName() == "pump")
-ImmediateHoldLetGo=ImmediateHoldLetGo()
-RequireStepOnHoldHeads=HoldHeadStep()
+CheckpointsFlashOnHold=IsGame("pump")
+ImmediateHoldLetGo=not IsGame("pump")
+RequireStepOnHoldHeads=not IsGame("pump")
 RequireStepOnMines=false
-InitialHoldLife=InitialHoldLife()
-MaxHoldLife=MaxHoldLife()
-# RollBodyIncrementsCombo=RollBodyIncrementsCombo()
+InitialHoldLife=IsGame("pump") and 0.05 or 1
+MaxHoldLife=IsGame("pump") and 0.05 or 1
 RollBodyIncrementsCombo=GetGamePrefB("UserPrefComboOnRolls")
-ScoreMissedHoldsAndRolls=ScoreMissedHoldsAndRolls()
+ScoreMissedHoldsAndRolls=not IsGame("pump")
 PercentUntilColorCombo=0.25
 ComboStoppedAt=50
 AttackRunTimeRandom=6
@@ -1904,8 +1903,8 @@ ChangeGroupsWithGameButtons=false
 PreviousGroupButton="MenuUp"
 NextGroupButton="MenuDown"
 #
-TwoPartSelection=TwoPartSelection()
-TwoPartConfirmsOnly=TwoPartConfirmsOnly()
+TwoPartSelection=IsGame("pump")
+TwoPartConfirmsOnly=IsGame("pump")
 TwoPartTimerSeconds=-1
 #
 SampleMusicDelay=0.25
