Remove deprecated switch, disable warnings.

--- a/src/libtomcrypt/libtomcrypt-net2008.vcproj
+++ b/src/libtomcrypt/libtomcrypt-net2008.vcproj
@@ -48,8 +48,9 @@
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="2"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
+				DisableSpecificWarnings="4311;4333"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -112,8 +113,9 @@
 				BufferSecurityCheck="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="2"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
+				DisableSpecificWarnings="4311"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -176,8 +178,9 @@
 				BufferSecurityCheck="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="2"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
+				DisableSpecificWarnings="4311"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -240,8 +243,9 @@
 				BufferSecurityCheck="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="2"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
+				DisableSpecificWarnings="4311"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
