move theme options to default so themers don't get a crash when making themes from scratch

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1205,6 +1205,7 @@ SeparateExitRow=false
 SeparateExitRowY=SCREEN_BOTTOM-40
 
 [ScreenOptionsExtended]
+LineNames="2,Sync,3,10,11,4,12,5,Theme"
 
 [ScreenOptionsServiceChild]
 
