--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2521,7 +2521,7 @@ Fallback="ScreenOptionsService"
 NextScreen="ScreenOptionsService"
 PrevScreen="ScreenOptionsService"
 #
-LineNames="2,Sync,3,10,11,4,12,5,Theme"
+LineNames="2,Sync,3,10,11,4,12,5"
 
 [ScreenOptionsServiceChild]
 Fallback="ScreenOptionsMaster"
