--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -4192,9 +4192,7 @@ BodyWidth=140
 [ScreenLogo]
 Fallback="ScreenAttract"
 PrevScreen=Branch.Init()
-# crashes!
-#NextScreen="ScreenHowToPlay"
-NextScreen="ScreenDemonstration"
+NextScreen="ScreenHowToPlay"
 StartScreen=Branch.TitleMenu()
 TimerSeconds=5
 ForceTimer=true
