thought I was done with this but certain things didn't want to work. RAGE

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -413,7 +413,7 @@ MeterSetCommand=%function(self,param) \
 end;
 #
 ShowDescription=true
-DescriptionX=GetUserPrefB("UserPrefAutoSetStyle") and (-64-8+20) or (-64-8)
+DescriptionX=ThemePrefs.Get("AutoSetStyle") and (-64-8+20) or (-64-8)
 DescriptionOnCommand=shadowlength,1;horizalign,left;zoom,0.65;maxwidth,128+8-20;uppercase,true;
 DescriptionSetCommand=%function(self,param) \
 	if self:GetText() == "" then \
@@ -431,7 +431,7 @@ AutogenY=0
 #AutogenOnCommand=diffuseshift;effectcolor1,Color.Alpha( Color("Green") , 0.5 );effectcolor2,ColorLightTone( Color("Green") );
 AutogenOnCommand=blend,Blend.Add;diffuseshift;effectcolor1,color("#FFCC00FF");effectcolor2,color("#FFCC0088");
 #
-ShowStepsType=GetUserPrefB("UserPrefAutoSetStyle")
+ShowStepsType=ThemePrefs.Get("AutoSetStyle")
 StepsTypeX=-64-8
 StepsTypeY=0
 StepsTypeOnCommand=
@@ -895,7 +895,7 @@ StageDisplayY=SCREEN_TOP+24+3
 StageDisplayOnCommand=skewx,-0.125;draworder,105;fov,90;zoom,0.675;zoomy,0;sleep,0.35;smooth,0.35;zoomy,0.675
 StageDisplayOffCommand=linear,0.25;zoomy,0;
 #
-ShowDifficultyDisplay=not GetUserPrefB("UserPrefAutoSetStyle") and not GAMESTATE:IsCourseMode()
+ShowDifficultyDisplay=not ThemePrefs.Get("AutoSetStyle") and not GAMESTATE:IsCourseMode()
 DifficultyDisplayX=SCREEN_CENTER_X-160
 DifficultyDisplayY=SCREEN_TOP+160-96+2
 DifficultyDisplayOnCommand=draworder,105;fov,90;zoom,1;zoomy,0;sleep,0.35;smooth,0.35;zoomy,1
@@ -1100,7 +1100,7 @@ end;
 #
 ShowDescription=true
 DescriptionX=-20-32
-DescriptionY=GetUserPrefB("UserPrefAutoSetStyle") and -5 or 0
+DescriptionY=ThemePrefs.Get("AutoSetStyle") and -5 or 0
 DescriptionOnCommand=shadowlength,1;uppercase,true;zoom,0.75;maxwidth,128+8
 DescriptionSetCommand=%function(self,param) \
 	if self:GetText() == "" then \
@@ -1118,7 +1118,7 @@ AutogenY=0
 AutogenOnCommand=
 AutogenSetCommand=%function(self,param) if param.Difficulty then self:diffuse(CustomDifficultyToLightColor(param.Difficulty)); self:strokecolor(CustomDifficultyToDarkColor(param.Difficulty)); end end
 #
-ShowStepsType=GetUserPrefB("UserPrefAutoSetStyle")
+ShowStepsType=ThemePrefs.Get("AutoSetStyle")
 StepsTypeX=-20-32
 StepsTypeY=7
 StepsTypeOnCommand=zoom,0.45
@@ -1148,7 +1148,7 @@ end;
 #
 ShowDescription=true
 DescriptionX=-20
-DescriptionY=GetUserPrefB("UserPrefAutoSetStyle") and -5 or 0
+DescriptionY=ThemePrefs.Get("AutoSetStyle") and -5 or 0
 DescriptionOnCommand=shadowlength,1;uppercase,true;zoom,0.75;maxwidth,128+8
 DescriptionSetCommand=%function(self,param) \
 	if self:GetText() == "" then \
@@ -1167,7 +1167,7 @@ AutogenY=0
 AutogenOnCommand=
 AutogenSetCommand=%function(self,param) if param.Difficulty then self:diffuse(CustomDifficultyToLightColor(param.Difficulty)); self:strokecolor(CustomDifficultyToDarkColor(param.Difficulty)); end end
 #
-ShowStepsType=GetUserPrefB("UserPrefAutoSetStyle")
+ShowStepsType=ThemePrefs.Get("AutoSetStyle")
 StepsTypeX=-20
 StepsTypeY=7
 StepsTypeOnCommand=zoom,0.45
@@ -1252,14 +1252,14 @@ ItemsLongRowSharedX=SCREEN_CENTER_X
 [ScreenOptionsSystemDirection]
 LineNames="1,2,3,4,5,6,7,8,9,FlashyCombo,RollCombo,10,11,12,13,14,16,LF,17,18,19,20,21,22"
 LineLF="lua,UserPrefLongFail()"
-LineRollCombo="lua,UserPrefComboOnRolls()"
-LineFlashyCombo="lua,UserPrefFlashyCombo()"
+LineRollCombo="lua,ThemePrefRow('ComboOnRolls')"
+LineFlashyCombo="lua,ThemePrefRow('FlashyCombo')"
 
 [ScreenOptionsGraphicsSound]
 
 [ScreenOptionsAdvanced]
 LineNames="Score,3,4,8,11,13,14,16,28,29,30,RollCombo"
-LineRollCombo="lua,UserPrefComboOnRolls()"
+LineRollCombo="lua,ThemePrefRow('ComboOnRolls')"
 
 [ScreenAppearanceOptions]
 
@@ -1274,17 +1274,17 @@ Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsExtended"
 PrevScreen="ScreenOptionsExtended"
 LineNames="gNotePos,gAuto,gScore,gSDisp,TimingDisplay,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter,FancyUIBG"
-LinegNotePos="lua,UserPrefNotePosition()"
-LinegScore="lua,UserPrefGameplayShowScore()"
-LinegSDisp="lua,UserPrefGameplayShowStepsDisplay()"
-LineTimingDisplay="lua,UserPrefTimingDisplay()"
-LinegOpts="lua,UserPrefShowLotsaOptions()"
-LinegAuto="lua,UserPrefAutoSetStyle()"
-LinegLongFail="lua,UserPrefLongFail()"
-LinegComboUnderField="lua,UserPrefComboUnderField()"
-LineFlashyCombo="lua,UserPrefFlashyCombo()"
-LineGameplayFooter="lua,UserPrefGameplayFooter()"
-LineFancyUIBG="lua,UserPrefFancyUIBG()"
+LinegNotePos="lua,ThemePrefRow('NotePosition')"
+LinegScore="lua,ThemePrefRow('GameplayShowScore')"
+LinegSDisp="lua,ThemePrefRow('GameplayShowStepsDisplay')"
+LineTimingDisplay="lua,ThemePrefRow('TimingDisplay')"
+LinegOpts="lua,ThemePrefRow('ShowLotsaOptions')"
+LinegAuto="lua,ThemePrefRow('AutoSetStyle')"
+LinegLongFail="lua,ThemePrefRow('LongFail')"
+LinegComboUnderField="lua,ThemePrefRow('ComboUnderField')"
+LineFlashyCombo="lua,ThemePrefRow('FlashyCombo')"
+LineGameplayFooter="lua,ThemePrefRow('GameplayFooter')"
+LineFancyUIBG="lua,ThemePrefRow('FancyUIBG')"
 
 [ScreenSelectGame]
 
@@ -1365,7 +1365,7 @@ StageDisplayY=SCREEN_TOP+24
 StageDisplayOnCommand=zoom,0.675;
 StageDisplayOffCommand=bounceend,0.25;zoom,0
 #
-ShowScoreFrame=GetUserPrefB("GameplayFooter");
+ShowScoreFrame=ThemePrefs.Get("GameplayFooter");
 ScoreFrameX=SCREEN_CENTER_X
 ScoreFrameY=SCREEN_BOTTOM+4
 ScoreFrameOnCommand=draworder,4;vertalign,bottom;zoomtowidth,SCREEN_WIDTH+4;diffuse,color("#ffd400");addy,80;sleep,2;decelerate,0.5;addy,-80;
@@ -1432,12 +1432,12 @@ DeltaSecondsP2OffCommand=
 ScoreP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 # ScoreP1X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 ScoreP1Y=SCREEN_BOTTOM-28
-ScoreP1OnCommand=draworder,101;visible,GetUserPrefB("UserPrefGameplayShowScore");diffuse,PlayerColor(PLAYER_1);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-50
+ScoreP1OnCommand=draworder,101;visible,ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_1);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-50
 ScoreP1OffCommand=
 ScoreP2X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 # ScoreP2X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 ScoreP2Y=SCREEN_BOTTOM-28
-ScoreP2OnCommand=draworder,101;visible,GetUserPrefB("UserPrefGameplayShowScore");diffuse,PlayerColor(PLAYER_2);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-50
+ScoreP2OnCommand=draworder,101;visible,ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_2);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-50
 ScoreP2OffCommand=
 #
 StepsDescriptionP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
@@ -1465,14 +1465,14 @@ PlayerOptionsP2OffCommand=
 StepsDisplayP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 # StepsDisplayP1X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 StepsDisplayP1Y=SCREEN_CENTER_Y
-StepsDisplayP1OnCommand=draworder,101;zoomy,0;linear,0.3;zoomy,1;sleep,3;queuecommand,( GetUserPrefB("UserPrefGameplayShowStepsDisplay") == true and "Show" or "Hide" );
+StepsDisplayP1OnCommand=draworder,101;zoomy,0;linear,0.3;zoomy,1;sleep,3;queuecommand,( ThemePrefs.Get("GameplayShowStepsDisplay") == true and "Show" or "Hide" );
 StepsDisplayP1ShowCommand=smooth,0.5;y,SCREEN_BOTTOM-20;
 StepsDisplayP1HideCommand=linear,0.5;zoomy,0
 StepsDisplayP1OffCommand=
 StepsDisplayP2X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 # StepsDisplayP2X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 StepsDisplayP2Y=SCREEN_CENTER_Y
-StepsDisplayP2OnCommand=draworder,101;zoomy,0;linear,0.3;zoomy,1;sleep,3;queuecommand,( GetUserPrefB("UserPrefGameplayShowStepsDisplay") == true and "Show" or "Hide" );
+StepsDisplayP2OnCommand=draworder,101;zoomy,0;linear,0.3;zoomy,1;sleep,3;queuecommand,( ThemePrefs.Get("GameplayShowStepsDisplay") == true and "Show" or "Hide" );
 StepsDisplayP2ShowCommand=smooth,0.5;y,SCREEN_BOTTOM-20;
 StepsDisplayP2HideCommand=linear,0.5;zoomy,0
 StepsDisplayP2OffCommand=
