--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -24,7 +24,7 @@ ScreenHeight=480
 # Allows you to pick all available game modes for your gametype: for example,
 # inserting enough coins for 1p would let you choose between solo, single
 # and double before each game
-AutoSetStyle=GetUserPrefB("UserPrefAutoSetStyle")
+AutoSetStyle=ThemePrefs.Get("AutoSetStyle")
 
 # Default modifiers and noteskin.
 DefaultModifiers="1x"
