--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -4,6 +4,7 @@ FallbackTheme=_fallback
 
 [Common]
 FirstAttractScreen=""
+AutoSetStyle=ThemePrefs.Get("AutoSetStyle")
 
 # 02 #
 [LightsManager]
@@ -296,6 +297,16 @@ ShowBoard=GAMESTATE:GetCurrentGame():GetName() == "kb7"
 [PlayerStageStats]
 
 [Player]
+# In The Groove
+# ReceptorArrowsYStandard=-125
+# ReceptorArrowsYReverse=145
+# StepMania Alpha 4
+# ~ ReceptorArrowsYStandard=-144
+# ~ ReceptorArrowsYReverse=144
+# SM5's default uses a UserPreference for this.
+ReceptorArrowsYStandard=GetTapPosition('Standard')
+ReceptorArrowsYReverse=GetTapPosition('Reverse')
+ComboUnderField=ComboUnderField()
 
 [PlayerOptions]
 
@@ -1251,7 +1262,7 @@ ItemsLongRowSharedX=SCREEN_CENTER_X
 
 [ScreenOptionsSystemDirection]
 LineNames="1,2,3,4,5,6,7,8,9,FlashyCombo,RollCombo,10,11,12,13,14,16,LF,17,18,19,20,21,22"
-LineLF="lua,UserPrefLongFail()"
+LineLF="lua,ThemePrefRow('LongFail')"
 LineRollCombo="lua,ThemePrefRow('ComboOnRolls')"
 LineFlashyCombo="lua,ThemePrefRow('FlashyCombo')"
 
