make juke'm box work?

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1675,7 +1675,7 @@ UpdateOnMessage=""
 #
 NumChoicesOnPage1=100
 DefaultChoice="GameStart"
-ChoiceNames="GameStart,Options,Edit,Exit"
+ChoiceNames="GameStart,Options,Edit,Jukebox,Exit"
 ChoiceGameStart="applydefaultoptions;text,Game Start;screen,"..Branch.StartGame()
 #ChoiceQuickPlay="applydefaultoptions;text,Quick Play;"
 ChoiceOptions="screen,ScreenOptionsService;text,Options"
