explain the sort level colors in the metrics

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -433,7 +433,29 @@ ProtimingW5Command=
 ProtimingMissCommand=
 
 [Course]
-# What.. are these anyways?
+# The course colors change depending on what course sort order is being used.
+# SortPreferredColor is used with preferred course sort.
+
+# [Song sort] number of songs in course
+# 1-3 songs: SortLevel5Color
+# 4-6 songs: SortLevel4Color
+# 7+ songs : SortLevel2Color
+
+# [Meter sort]
+# if all songs are fixed, return SortLevel1Color.
+# meter 1-4: SortLevel5Color
+# meter 5-6: SortLevel4Color
+# meter 7-9: SortLevel3Color
+# meter 10+: SortLevel2Color
+# [Meter sum sort] is about the same, except the values are
+# 1-19, 20-29, 30-39, and 40+.
+
+# [Rank sort]
+# Ranking 1: SortLevel5Color
+# Ranking 2: SortLevel3Color
+# Ranking 3: SortLevel1Color
+# Others   : SortLevel4Color
+
 SortPreferredColor=color("1,1,1,1")	-- Preferred is both for when courses are in preferred sort, or are autogen
 SortLevel1Color=color("1,0,0,1")
 SortLevel2Color=color("1,1,0,1")
