more comments in fallback theme metrics

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -485,7 +485,7 @@ BannerOnCommand=
 BannerFadeFromCachedCommand=diffusealpha,1;stoptweening;linear,0.25;diffusealpha,0
 # When it loads into clarity
 BannerFadeOffCommand=diffusealpha,1;stoptweening;linear,0.25;diffusealpha,0
-# ?
+# ResetFade is played in BeforeChange. It happens after the FadeFromCached/FadeOff command.
 BannerResetFadeCommand=diffusealpha,1
 
 BannerRouletteCommand=
@@ -526,8 +526,8 @@ UseNameBlacklist=false
 AllowExtra2=true
 # Don't let the player change difficulties on an ES/OMES
 LockExtraStageSelection=true
-# [sm-ssc] Normally, in event mode, the premium value is ignored. Set this
-# metric to true to re-gain that behavior.
+# Normally, in event mode, the premium value is ignored. Set this metric to
+# true to re-gain that behavior.
 DisablePremiumInEventMode=false
 # Let edit steps be allowed for earning extra stages.
 EditAllowedForExtra=false
@@ -547,7 +547,7 @@ RadarValueMapP2OnCommand=diffuse,PlayerColor(PLAYER_2)
 EmptyName="SSC!"
 
 [Inventory]
-# ?
+# Defines the probability of using items (1/ItemUseRateSeconds).
 ItemUseRateSeconds=0.0
 
 [LifeMeterBar]
@@ -2227,7 +2227,7 @@ Appearance,1="mod,hidden;name,Hidden"
 Appearance,2="mod,sudden;name,Sudden"
 Appearance,3="mod,stealth;name,Stealth"
 Appearance,4="mod,blink;name,Blink"
-# Random Vanish causes crashes [going into sm-ssc v1.0 beta 4] -aj
+# Random Vanish causes crashes with certain noteskins (maybe all?) -aj
 #Appearance,5="mod,randomvanish;name,R.Vanish"
 
 # Appearance="6"
