[PercentageDisplay] Remove unused ApplyScoreDisplayOptions metric, added PercentFormat and RemainderFormat metrics.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -634,6 +634,7 @@ PercentUseRemainder=false
 ApplyScoreDisplayOptions=true
 DancePointsDigits=5
 #
+PercentFormat="%2d"
 PercentP1X=0
 PercentP1Y=0
 PercentP1OnCommand=zoom,0.7;shadowlength,0;diffuse,PlayerColor(PLAYER_1)
@@ -1172,6 +1173,7 @@ DeltaSecondsHeldCommand=
 DeltaSecondsGainLifeCommand=
 
 [ScoreDisplayPercentage Percent]
+PercentFormat="%2d"
 PercentP1X=0
 PercentP1Y=0
 PercentP1OnCommand=shadowlength,0;diffuse,PlayerColor(PLAYER_1)
@@ -1235,6 +1237,7 @@ LevelP2OffCommand=
 AttackDurationSeconds=3.0
 
 [ScreenEvaluation Percent]
+PercentFormat="%2d"
 PercentP1X=0
 PercentP1Y=0
 PercentP1OnCommand=horizalign,right;vertalign,bottom;glowshift;effectperiod,2;shadowlength,0
@@ -1243,6 +1246,7 @@ PercentP2X=0
 PercentP2Y=0
 PercentP2OnCommand=horizalign,right;vertalign,bottom;glowshift;effectperiod,2;shadowlength,0
 PercentP2OffCommand=
+RemainderFormat=".%02d%%"
 PercentRemainderP1X=0
 PercentRemainderP1Y=0
 PercentRemainderP1OnCommand=horizalign,left;vertalign,bottom;glowshift;effectperiod,2;shadowlength,0
